--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id="Wrapper">
 
-    <div id="title" onclick="location.href='../templates/main/loginPage.html'" >
+    <div id="title" onclick="location.href='/user/login'" >
         <p class="titleMessage">소드마스터의 시대가 오고있다!</p>
         <div class="main">
             <p>
