[#75] 메인 컨트롤러 구현

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
 <body>
 <div id="Wrapper">
 
-    <div id="title" onclick="location.href='/user/login'" >
+    <div id="title" onclick="location.href='/login'" >
         <p class="titleMessage">소드마스터의 시대가 오고있다!</p>
         <div class="main">
             <p>
