[#124] 헌트맵(1~10), 속성 선택, 강화/강화결과화면 배경음악 설정

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </head>
 <body>
+<audio autoplay loop>
+    <source src="img/start.m4a">
+</audio>
 <div id="Wrapper">
 
     <div id="title" onclick="location.href='/login'" >
